rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__sql_generation__base_and_calculated_measure_parital_match_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/sql_generation.rs
assertion_line: 541
expression: result
---
orders__status | orders__amount_per_count
---------------+-------------------------
cancelled      | 25.000000000            
completed      | 185.000000000           
pending        | 146.250000000
