rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__sql_generation__basic_pre_agg_sql_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/sql_generation.rs
expression: result
---
visitors__source | visitors__count
-----------------+----------------
NULL             | 1              
google           | 5              
organic          | 2              
twitter          | 2
