rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__sql_generation__custom_granularity_full_match_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/sql_generation.rs
assertion_line: 719
expression: result
---
orders__status | orders__created_at_half_year | orders__count
---------------+------------------------------+--------------
cancelled      | 2025-01-01 00:00:00          | 1            
completed      | 2025-01-01 00:00:00          | 5            
pending        | 2025-01-01 00:00:00          | 4
