rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__sql_generation__custom_granularity_non_additive_full_match_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/sql_generation.rs
assertion_line: 832
expression: result
---
orders__status | orders__created_at_half_year | orders__avg_amount
---------------+------------------------------+-------------------
cancelled      | 2025-01-01T00:00:00          | 25.00000          
completed      | 2025-01-01T00:00:00          | 185.00000         
pending        | 2025-01-01T00:00:00          | 146.25000
