rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__sql_generation__custom_granularity_non_strict_self_match_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/sql_generation.rs
assertion_line: 887
expression: result
---
orders__created_at_half_year | orders__count
-----------------------------+--------------
2025-01-01T00:00:00          | 10
