rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/snapshots/cubesqlplanner__tests__integration__pre_aggregations__sql_generation__daily_rollup_full_match_cubestore_result.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/pre_aggregations/sql_generation.rs
assertion_line: 187
expression: result
---
orders__country | orders__created_at_day | orders__count
----------------+------------------------+--------------
Boston          | 2025-01-31 00:00:00    | 1            
Boston          | 2025-02-01 00:00:00    | 2            
Chicago         | 2025-02-15 00:00:00    | 1            
Chicago         | 2025-03-01 00:00:00    | 2            
New York        | 2025-01-10 00:00:00    | 2            
New York        | 2025-01-11 00:00:00    | 1            
New York        | 2025-03-02 00:00:00    | 1
